fix(core): address PR review comments (spotless, javadoc, regression test, ADR-021)